crates/plotnik-lib/tests/03-analyze/direct_recursion/no_input_sibling_named_branch.txt
A = [(A) (leaf)]
==== diagnostics ====
error: infinite recursion: cycle consumes no input
 --> query.ptk:1:7
  |
1 | A = [(A) (leaf)]
  |       ^
  |       |
  |       references itself
  |
help: recursive references must consume input before recursing
==== symbols ====
A
  A (cycle)
